force-app/main/default/objects/Interview__c/fields/AO_Interview_Status_Manual__c.field-meta.xml
<CustomField>
    <fullName>AO_Interview_Status_Manual__c</fullName>
    <label>AO Interview Status (Manual)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>