force-app/main/default/objects/Interview__c/fields/Interviewer_Email__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Email__c</fullName>
    <formula>Interviewer__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interviewer Email</label>
    <type>Text</type>
</CustomField>