force-app/main/default/objects/Interview__c/fields/Interviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Name__c</fullName>
    <formula>Interviewer__r.FirstName+&quot; &quot;+Interviewer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interviewer Name</label>
    <type>Text</type>
</CustomField>