force-app/main/default/objects/Interview__c/fields/Lead_assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Lead_assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead assigned to (AC)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interviews1</relationshipName>
    <type>Lookup</type>
</CustomField>