force-app/main/default/objects/Interview__c/fields/Lead_Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Interview_Type__c</fullName>
    <formula>text(Lead__r.Interview_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Interview Type</label>
    <type>Text</type>
</CustomField>