force-app/main/default/objects/Interview__c/fields/Lead_recordtype__c.field-meta.xml
<CustomField>
    <fullName>Lead_recordtype__c</fullName>
    <formula>Lead__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead recordtype</label>
    <type>Text</type>
</CustomField>