force-app/main/default/objects/Interview__c/fields/Lead_Version__c.field-meta.xml
<CustomField>
    <fullName>Lead_Version__c</fullName>
    <formula>Text(Lead__r.Lead_Version__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Version</label>
    <type>Text</type>
</CustomField>