force-app/main/default/objects/Interview__c/fields/Meeting_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Unique_Id__c</fullName>
    <label>Meeting Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>