force-app/main/default/objects/Interview__c/fields/Recommended_Course_Offer__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Course_Offer__c</fullName>
    <label>Recommended Course (Offer)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Analytics Course</fullName>
            </value>
            <value>
                <fullName>Operations Management Course</fullName>
            </value>
            <value>
                <fullName>Digital Marketing Course</fullName>
            </value>
            <value>
                <fullName>Business Development Course</fullName>
            </value>
            <value>
                <fullName>Human Resources Generalist Course</fullName>
            </value>
            <value>
                <fullName>Product Management Course</fullName>
            </value>
            <value>
                <fullName>Data Science Course</fullName>
            </value>
            <value>
                <fullName>Backend Development Course</fullName>
            </value>
            <value>
                <fullName>Fullstack Development Course</fullName>
            </value>
            <value>
                <fullName>Software Testing Course</fullName>
            </value>
            <value>
                <fullName>Frontend Development Course</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>