force-app/main/default/objects/Interview__c/fields/Recommended_Plan_Offer__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Plan_Offer__c</fullName>
    <label>Recommended Plan (Offer)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Iconic</fullName>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>