force-app/main/default/objects/Interview__c/fields/Relevel_Interview_Id__c.field-meta.xml
<CustomField>
    <fullName>Relevel_Interview_Id__c</fullName>
    <label>Relevel Interview Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>