force-app/main/default/objects/Interview__c/fields/Send_Admission_Letter__c.field-meta.xml
<CustomField>
    <fullName>Send_Admission_Letter__c</fullName>
    <label>Send Admission Letter</label>
    <length>25</length>
    <type>Text</type>
</CustomField>