force-app/main/default/objects/Interview__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
                <default>true</default>
                <label>Started</label>
            </value>
            <value>
                <fullName>Interviewer Not Found</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Missed</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Interviewer Missed</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
                <isActive>false</isActive>
                <label>Disqualified</label>
            </value>
            <value>
                <fullName>Qualified</fullName>
                <isActive>false</isActive>
                <label>Qualified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>