force-app/main/default/objects/Interview__c/listViews/Todays_Interview_V0.listView-meta.xml
<ListView>
    <fullName>Todays_Interview_V0</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead_Interview_Type__c</columns>
    <columns>Lead_recordtype__c</columns>
    <columns>Lead_Version__c</columns>
    <columns>Interviewer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Lead_Version__c</field>
        <operation>equals</operation>
        <value>V0</value>
    </filters>
    <label>Todays Interview - V0</label>
</ListView>